routing for creating posts

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post-feed.component.html
@@ -1,6 +1,6 @@
 <mat-card *ngIf="loggedIn && shouldShowPostButton()">
   <p>
-      <a routerLink="/home/post/-1"><button mat-flat-button color="primary">Create Post</button></a>
+      <a routerLink="/postfeed/post/-1"><button mat-flat-button color="primary">Create Post</button></a>
   </p>
 </mat-card>
 <mat-card *ngIf="!loggedIn">
