--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/post.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/post.component.html
@@ -14,8 +14,8 @@
     <mat-card-actions>
       <button mat-flat-button color="primary" (click)="votePost(1)" [disabled]="hasDownvoted||!loggedIn">Upvotes: {{post.upvotes}}</button>
       <button mat-flat-button color="primary" (click)="votePost(-1)" [disabled]="hasUpvoted||!loggedIn">Downvotes: {{post.downvotes}}</button>
-      <button mat-flat-button color="warn" (click)="flagPost()" [disabled]="hasFlagged||!loggedIn"><mat-icon>flag</mat-icon> <div *ngIf="user?.isAdmin">({{post.flags}})</div></button>
-      <button mat-flat-button color="primary" (click)="unflagPost()" *ngIf="user?.isAdmin">unflag post</button>
+      <button mat-flat-button color="warn" (click)="confirmFlagging()" [disabled]="hasFlagged||!loggedIn"><mat-icon>flag</mat-icon> <div *ngIf="user?.isAdmin">({{post.flags}})</div></button>
+      <button mat-flat-button color="primary" (click)="confirmUnflagging()" *ngIf="user?.isAdmin">unflag post</button>
       <span *ngIf="user?.userId === post.userId || user?.isAdmin">
         <button  mat-flat-button color="primary" (click)="editMode = true; loadPicturesToPost()">Edit Post</button>
         <button mat-flat-button color="warn" (click)="confirmDeleting(post)">Delete Post</button>
