display usernames in order component

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order-form/order-form.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order-form/order-form.component.html
@@ -40,7 +40,7 @@
   <span id="emptyFields" style="visibility: hidden"> Please fill out all the address details. </span>
 
   <p>
-    <button (click)="confirmOrder()" [routerLink]="['fan-shop']"> Confirm Order </button>
+    <button (click)="confirmOrder()"> Confirm Order </button>
   </p>
 
   <button (click)="postAPI()">Make api call to post</button>
