clean up code in fanshop and reduce duplicated code from confirmation boxes

--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order-feed/order-feed.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/order-feed/order-feed.component.html
@@ -7,7 +7,9 @@
     <mat-option value="all">Show All</mat-option>
   </mat-select>
 </mat-form-field>
+
 <div *ngFor="let order of selectedOrders">
   <app-order [order]="order"
-             (update)="updateOrder($event)"></app-order>
+             (update)="updateOrder($event)">
+  </app-order>
 </div>
