--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/post.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/post-feed/post/post.component.html
@@ -71,19 +71,22 @@
           <mat-label>Title</mat-label>
           <input matInput #message maxlength="256" [(ngModel)]="post.title" [ngModelOptions]="{standalone: true}">
           <mat-hint align="end">{{message.value.length}} / 256</mat-hint>
-        </mat-form-field><mat-form-field appearance="fill">
+        </mat-form-field>
 
         <!-- CATEGORY -->
-        <mat-label>Category:</mat-label>
-        <mat-select [(ngModel)]="selectCategory"(ngModelChange)="findCategory()"[ngModelOptions]="{standalone: true}" >
-          <mat-option value="Restaurant">Restaurant</mat-option>
-          <mat-option value="University">University</mat-option>
-          <mat-option value="Coffeeshop">Coffeeshop</mat-option>
-          <mat-option value="Sightseeing">Sightseeing</mat-option>
-          <mat-option value="Shopping">Shopping</mat-option>
-          <mat-option value="Museum">Museum</mat-option>
-        </mat-select>
-      </mat-form-field><span id="setTitle" style="visibility: hidden">Please set a title. </span>
+        <mat-form-field appearance="fill">
+          <mat-label>Category:</mat-label>
+          <mat-select [(ngModel)]="selectCategory"(ngModelChange)="findCategory()"[ngModelOptions]="{standalone: true}" >
+            <mat-option value="Restaurant">Restaurant</mat-option>
+            <mat-option value="University">University</mat-option>
+            <mat-option value="Coffeeshop">Coffeeshop</mat-option>
+            <mat-option value="Sightseeing">Sightseeing</mat-option>
+            <mat-option value="Shopping">Shopping</mat-option>
+            <mat-option value="Museum">Museum</mat-option>
+          </mat-select>
+        </mat-form-field>
+
+        <span id="setTitle" style="visibility: hidden">Please set a title. </span>
         <span id="setCategory" style="visibility: hidden"> Please set a category.</span>
         <span id="setDescriptionOrImage" style="visibility: hidden"> Please set a Description or Image.</span>
 
@@ -97,15 +100,17 @@
             <mat-icon>attach_file</mat-icon>
         </button>
       </div>
-
       </form>
-
 
 
       <!-- DESCRIPTION -->
       <br><br>
-      <angular-editor id="editor1" [(ngModel)]="post.description" [config]="config1" (ngModelChange)="onChange($event)"
-                      (blur)="onBlur($event)"></angular-editor>
+      <angular-editor id="editor1"
+                      [(ngModel)]="post.description"
+                      [config]="config1"
+                      (ngModelChange)="onChange($event)"
+                      (blur)="onBlur($event)">
+      </angular-editor>
 
       <span id="image"></span>
       <button (click)="deleteImages()">delete all images attached to this post</button><br>
