--- a/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/product/product.component.html
+++ b/ese2021-project-scaffolding/scaffolding/frontend/src/app/fan-shop/product/product.component.html
@@ -65,7 +65,7 @@
         <mat-form-field appearance="fill">
 
         <mat-label>Category:</mat-label>
-        <mat-select [(ngModel)]="selectCategory"(ngModelChange)="findCategory()"[ngModelOptions]="{standalone: true}" >
+        <mat-select [(ngModel)]="selectCategory" (ngModelChange)="findCategory()" [ngModelOptions]="{standalone: true}" >
           <mat-option value="Restaurant">Restaurant</mat-option>
           <mat-option value="University">University</mat-option>
           <mat-option value="Coffeeshop">Coffeeshop</mat-option>
@@ -92,8 +92,7 @@
 
         <!-- DESCRIPTION -->
         <br><br>
-        <angular-editor id="editor1" [(ngModel)]="product.description" [config]="config1" (ngModelChange)="onChange($event)"
-                        (blur)="onBlur($event)"></angular-editor>
+        <angular-editor id="editor1" [(ngModel)]="product.description" [config]="config1"></angular-editor>
 
       <span id="image"></span>
       <button (click)="deleteImages()">delete all images attached to this product</button><br>
